# DAE_ToolDevelopment

ClassDemos/Demo2Project/Demo2/: CMakeLists.txt
ClassDemos/Example02/IComponent/: CMakeLists.txt  IComponent.h
ClassDemos/Example03/Game/: CMakeLists.txt  main.cpp
ClassDemos/Example1/: CMakeLists.txt
ClassDemos/Example1/Game/: HelloWorld.cpp
ClassPractice/Calculator_Combined/CalculatorCmd/: main.cpp
ClassPractice/Calculator_Combined/CalculatorForm/: CMakeLists.txt  calculatorform.cpp
ClassPractice/Calculator_Combined/CalculatorLib/: CMakeLists.txt
ClassPractice/ClassDemos/Demo2Project/: CMakeLists.txt
ClassPractice/ClassDemos/Demo2Project/Demo2/: Demo2.h
ClassPractice/ClassDemos/Example02/: CMakeLists.txt
ClassPractice/ClassDemos/Example02/Game/: main.cpp
ClassPractice/ClassDemos/Example03/: CMakeLists.txt
ClassPractice/ClassDemos/Example1/Game/: CMakeLists.txt
ClassPractice/CommandLineProject/CommandLine/: CMakeLists.txt  CommandLine.cpp
ClassPractice/Cute/ObjFileLoader/: CMakeLists.txt  objfileloader.ui
ClassPractice/Cute/calculatorform/: CMakeLists.txt  CMakeSettings.json  License.txt  calculatorform.cpp  calculatorform.h
CommandLineProject/: CMakeLists.txt
CommandLineProject/CommandLine/: CMakeLists.txt  CommandLine.cpp
Cute/ObjFileLoader/: main.cpp  objfileloader.cpp  objfileloader.h  objfileloader.ui
Cute/calculatorform/: CMakeLists.txt  CMakeSettings.json  calculatorform.cpp  calculatorform.h  calculatorform.pro  calculatorform.ui  main.cpp  objviewerform.cpp  objviewerform.h  objviewerform.ui
Demo2Project/Demo2/: Demo2.cpp
Demo2Project/resources/: utf8.json
DemoWeek2/: CMakeLists.txt  DemoWeek2.cpp
Example02/Game/: CMakeLists.txt
Example02/IComponent/: Sprite.h
Example03/MathLib/: CMakeLists.txt  Vector2f.cpp  Vector2f.h
Midterm/BlockConverter/: CMakeLists.txt
Midterm/BlockConverter/BlockConverterCmd/: CMakeLists.txt
Midterm/BlockConverter/BlockConverterForm/: CMakeLists.txt  calculatorform.cpp  calculatorform.h
Midterm/BlockConverter/BlockConverterLib/: CMakeLists.txt  calculator.cpp  calculator.h
Midterm/Calculator_Combined/: CMakeLists.txt
Midterm/Calculator_Combined/CalculatorCmd/: CMakeLists.txt
Midterm/Calculator_Combined/CalculatorForm/: CMakeLists.txt  calculatorform.cpp  calculatorform.h  calculatorform.ui
